# enigma2

./: .clang-format  Makefile.am  configure.ac  enigma2.pc.in  pyproject.toml  sonar-project.properties
.github/workflows/: SonarCloud.yml  build.yml  codeql.yml  enigma2.yml  lint.yml  ruff.yml  updatepot.yml  updatepot2.yml  variables.yml
data/: keymap.u80  keymap.xml  menu.xml  setup.xml  skin_default.xml  startwizard.xml
doc/: ENIGMA_CODE_STYLE.md  FunctionTimer.md  SKINATTRIBUTES.md  SKINATTRIBUTES_DE.md  SKIN_SAMPLES.md  SKIN_WINDOWSTYLE.md
hotplug/: bdpoll.c  hotplug.c
include/: Makefile.am  SQLiteWrapper.hpp  hardwaredb.h  nanosvg.h
lib/actions/: action.cpp
lib/base/: Makefile.inc  console.cpp  console.h  e2avahi.cpp  e2networkservicebrowser.h  ebase.cpp  eerror.cpp  esettings.h  esimpleconfig.cpp  profile.h  wrappers.cpp
lib/components/: file_eraser.cpp  scan.cpp  tuxtxtapp.cpp
lib/driver/: Makefile.inc  avcontrol.cpp  avcontrol.h  edb.cpp  edb.h  ehotplug_socket.cpp  ehotplug_socket.h  inputhotplug.cpp  inputhotplug.h  rc.h  rcinput.cpp
lib/dvb/: Makefile.inc  atsc.cpp  db.cpp  db.h  decoder.cpp  decoder.h  demux.cpp  demux.h  dvb.cpp  dvb.h  epgcache.cpp  epgchanneldata.cpp  eramtimeshift.cpp  eramtimeshift.h  esection.h  fbc.cpp  filepush.cpp  filepush.h  frontend.cpp  idemux.h  idvb.h  metaparser.cpp  metaparser.h  pgssubtitle.cpp  pgssubtitle.h  pmt.cpp  pmt.h  pmtparse.cpp  (+9 more)
main/: Makefile.am  bsod.cpp  enigma.cpp
po/: en.po  enigma2.pot  updatepot.sh
tools/: Makefile.am  enigma2.sh.in  get_global_strings.py  wlanactivator  wlconfignew
(+209 files in other folders)
